# util

./: CMakeLists.txt  build.sh
cmake/: utilConfig.cmake.in
include/: array.h  assert.h  error.h  linked-list.h  log.h  macros.h  math.h  maths.h  memory.h  raw-data.h  types.h
include/file/: file-status.h  path.h  read.h
include/flo/util/file/: read.h
include/hash/: generic-msi-hash.h  hash-comparison-status.h  hash-constants.h  hashes.h  new-hash.h  string-hash.h  uint16-t-hash.h
include/hash/msi/: common.h  string-hash.h  string-set.h  uint16-hash.h  uint16-set.h
include/hash/trie/: common-iterator.h  string-set.h  string-uint16-map.h  uint16-set.h
include/memory/: arena.h  buddy-allocator.h  macros.h  pool-allocator.h
include/text/: char.h  string.h
src/: log.c
src/file/: path.c  read.c
src/hash/: hash-comparison-status.c  string-hash.c  uint16-t-hash.c
src/hash/msi/: common.c  string-hash.c  string-set.c  uint16-hash.c  uint16-set.c
src/hash/trie/: string-set.c  string-uint16-map.c  uint16-set.c
src/memory/: arena.c  buddy-allocator.c  pool-allocator.c
